Favicon added. GIF preloader on needed sections added, with curtains specific color for each page.

--- a/dev/assets/_modules/preloader.pug
+++ b/dev/assets/_modules/preloader.pug
@@ -1,1 +1,4 @@
-//- .preloader
+#preload_intro.preloader
+	img.loading-gif(src="img/preloader.gif", alt="Jungle Beige loading animation")
+	
+#preload_outro.preloader
