--- a/dev/assets/about.pug
+++ b/dev/assets/about.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | About us
+
+
 block content
 	.about-section.snj-container-fluid.flex-column
 		.row
