--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -1,6 +1,15 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Mail form
+
+
+block preloader
+	#preload_intro.preloader.light-orange
+	#preload_outro.preloader
+
+
 block content
 	.message-section.snj-container-fluid.center-content
 		.row.center-margin
