--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -1,6 +1,14 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Our Work
+
+
+block preloader
+	include _modules/preloader.pug
+
+
 block content
 	.ourwork.snj-container-fluid
 		.row
