--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | High Beams
+
+
 block content
 	.snj-container-fluid.project-page
 		.row
@@ -30,8 +34,8 @@ block content
 
 						p Finally, with crew members from all over the world, with different backgrounds, languages and more, the ethos of High Beams became Vibes First. Because if the vibes are right, people can always connect, train and party together.
 
-						p High Beams Instagram page: 
-							a(href="https://www.instagram.com/highbeamsdubai/" target="_blank" rel="nofollow noopener noreferrer") https://www.instagram.com/highbeamsdubai/
+						p
+							a(href="https://www.instagram.com/highbeamsdubai/" target="_blank" rel="nofollow noopener noreferrer") High Beams Instagram page.
 						
 						p
 							a(href="https://highbeamsdubai.com/" target="_blank" rel="nofollow noopener noreferrer") High Beams website.
