--- a/dev/assets/project-commerce-amongst.pug
+++ b/dev/assets/project-commerce-amongst.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Amongst Few E-commerce
+
+
 block content
 	.snj-container-fluid.project-page#commerce-amongst-project
 		.row
