--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | PUMA Event Curation
+
+
 block content
 	.snj-container-fluid.project-page#event-puma-project
 		.row
