--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Cartel Coffee
+
+
 block content
 	.snj-container-fluid.project-page#coffee-project
 		.row
