--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | PUMA Content Creation & Management
+
+
 block content
 	.snj-container-fluid.project-page#manage-puma-project
 		.row
