--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | PUMA Suede Guerrillas
+
+
 block content
 	.snj-container-fluid.project-page#suede-guerrilla-project
 		.row
