--- a/dev/assets/thanks.pug
+++ b/dev/assets/thanks.pug
@@ -1,6 +1,15 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Thanks
+
+
+block preloader
+	#preload_intro.preloader.dark-cream
+	#preload_outro.preloader
+
+
 block content
 	.thanks-section.snj-container-fluid
 		.row
