--- a/dev/assets/_modules/footer-nav.pug
+++ b/dev/assets/_modules/footer-nav.pug
@@ -9,5 +9,5 @@ mixin footer(scroll)
 			else
 				span.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") .
 
-			a.link-pages.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="contact.html")
+			a.link-pages.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="contact.html" color="brown")
 				span.line-link Contact us
