--- a/dev/assets/index.pug
+++ b/dev/assets/index.pug
@@ -1,5 +1,8 @@
 extends _templates/layout.pug
 
+block preloader
+	include _modules/preloader.pug
+
 block content
 	.index-wrapper
 		.background-wrapper.home-bg.shader-container
