--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Future Street Cred
+
+
 block content
 	.snj-container-fluid.project-page
 		.row
