--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Amongst Few Event Curation
+
+
 block content
 	.snj-container-fluid.project-page
 		.row
