--- a/dev/assets/project-social-power.pug
+++ b/dev/assets/project-social-power.pug
@@ -1,6 +1,10 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Power Horse
+
+
 block content
 	.snj-container-fluid.project-page#power-horse-project
 		.row
