--- a/dev/assets/workbranding.pug
+++ b/dev/assets/workbranding.pug
@@ -1,6 +1,14 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Branding & Design
+
+
+block preloader
+	include _modules/preloader.pug
+
+
 block content
 	#work-sections-branding.worksections-bg.shader-container
 		img.shader-img(src="img/shaders/Branding_Design-Shader-Negro.jpg", mobsrc="img/shaders/Branding_Design-Shader-Negro.jpg", alt="Distortioned background")
