--- a/dev/assets/workevent.pug
+++ b/dev/assets/workevent.pug
@@ -1,6 +1,14 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Event Curation
+
+
+block preloader
+	include _modules/preloader.pug
+
+
 block content
 	#work-sections-event.worksections-bg.shader-container
 		img.shader-img(src="img/shaders/Event-Curation-Shader-Negro.jpg", mobsrc="img/shaders/Event-Curation-Shader-Negro.jpg", alt="Distortioned background")
