--- a/dev/assets/workmanagement.pug
+++ b/dev/assets/workmanagement.pug
@@ -1,15 +1,23 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Content Creation & Management
+
+
+block preloader
+	include _modules/preloader.pug
+
+
 block content
 	#work-sections-management.worksections-bg.shader-container
 		img.shader-img(src="img/shaders/Content-Creation_Management-Shader-Negro.jpg", mobsrc="img/shaders/Content-Creation_Management-Shader-Negro.jpg", alt="Distortioned background")
 
 			
 	.sections-p-wrapper.project-bg-puma
-		+project-sections(" Content creation & Management", "PUMA", "01", "project-manage-puma.html")
+		+project-sections(" Content Creation & Management", "PUMA", "01", "project-manage-puma.html")
 	.sections-p-wrapper.project-bg-coffee
-		+project-sections(" Content creation & Management", "Cartel Coffee", "02", "project-manage-coffee.html")
+		+project-sections(" Content Creation & Management", "Cartel Coffee", "02", "project-manage-coffee.html")
 	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
