--- a/dev/assets/workstrategy.pug
+++ b/dev/assets/workstrategy.pug
@@ -1,6 +1,14 @@
 extends _templates/layout.pug
 
 
+block title
+	title Jungle Beige | Campaign & Social Media Strategy
+
+
+block preloader
+	include _modules/preloader.pug
+
+
 block content
 	#work-sections-strategy.worksections-bg.shader-container
 		img.shader-img(src="img/shaders/Campaign_Social-Media-Shader-Negro.jpg", mobsrc="img/shaders/Campaign_Social-Media-Shader-Negro.jpg", alt="Distortioned background")
