--- a/dev/scss/global/_vars.scss
+++ b/dev/scss/global/_vars.scss
@@ -18,6 +18,7 @@ $brown: #ad976f;
 $light-brown: #cbbba2;
 $cream: #ffecd0;
 $light-cream: #ffc268;
+$dark-cream: #cdbda5;
 
 // Grid
 $snj-grid__maxWidth: 1212px;
