--- a/dev/scss/modules/_preloader.scss
+++ b/dev/scss/modules/_preloader.scss
@@ -6,13 +6,14 @@
 	width: 100%;
 	height: 100%;
 	display: block;
+	background-color: $black;
 	@include transform-origin(center, bottom);
 
 	// preloder dependiendo de la sección
-	&.color-1{background-color: $black;}
-	&.color-2{background-color: $gray;}
-	&.color-3{background-color: $brown;}
-	&.color-4{background-color: $light-orange;}
+	&.gray{background-color: $gray;}
+	&.brown{background-color: $brown;}
+	&.light-orange{background-color: $light-orange;}
+	&.dark-cream{background-color: $dark-cream;}
 
 	&#preload_intro{
 		@include transitions-ease(.5s);
@@ -31,6 +32,13 @@
 			@include transitions-ease(.7s);
 			@include translate3d(0, 0, 0);
 		}
+	}
+
+	.loading-gif{
+		position: absolute;
+		margin: auto;
+		top: 0; bottom: 0;
+		left: 0; right: 0;
 	}
 }
 
