--- a/dev/assets/_modules/side-nav.pug
+++ b/dev/assets/_modules/side-nav.pug
@@ -4,7 +4,7 @@
 			a.page_transitioner.menu-item.sidenav-elems(href="about.html")
 				h2.item-title About Us
 				p.item-intro Know us a little more.
-			a.page_transitioner.menu-item.sidenav-elems(href="contact.html")
+			a.page_transitioner.menu-item.sidenav-elems(href="contact.html" color="brown")
 				h2.item-title Contact Us
 				p.item-intro Drop us a line.
 
