Copy updates requested by BJ on May 5 implemented.

--- a/dev/assets/_modules/inputs-form.pug
+++ b/dev/assets/_modules/inputs-form.pug
@@ -8,7 +8,7 @@ form.inputs-container(name="contact-form" action="mail.php" method="POST" enctyp
 
 		.input-wrapper
 			input.jb-formfield(type="email" name="form-email" id="form-email" required)
-			label.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="2" for="form-email") Your mail
+			label.placeholder.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="3" data-cascade-delay="2" for="form-email") Your email
 			span.bar.jb-cascade(data-cascade="line-full" data-cascade-delay-mobile="2" data-cascade-delay="2")
 
 		.input-wrapper
