--- a/dev/assets/_modules/slide-about.pug
+++ b/dev/assets/_modules/slide-about.pug
@@ -13,7 +13,7 @@
 		#paragraphs-wrap.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="2" data-cascade-delay="2")
 			p.about-p.show Jungle Beige was launched in 2016 by Khalid Bin Hadher, Michael Taylor, Florian Moser and B.J. De Guzman. The imagination and perseverance needed to build a culturally relevant brand is in the DNA of our agency because it’s in the DNA of our founders.
 
-			p.about-p Khalid has developed numerous brands from scratch, including Bikers Cafe, Airwerks and Myocum. Michael and Florian, along with Khalid, created Amongst Few, Amongst Few Cafe and Unison Barbershop. B.J. is a co-founder of High Beams Dubai and one of the key architects behind PUMA’s Suede Guerrillas.
+			p.about-p Khalid has developed numerous brands from scratch, including Bikers Café, Airwerks and Myocum. Michael and Florian, along with Khalid, created amongst few, amongst few café and Unison Barbershop. B.J. is a co-founder of High Beams Dubai and one of the key architects behind PUMA’s Suede Guerrillas.
 
 			p.about-p This unique background of being led by actual brand creators gives us a complete understanding of what our clients experience and continually strive to achieve. It also means we have the same intensity for producing work that is authentic to your brand, and revered by your supporters.
 
