--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -18,7 +18,7 @@ block content
 				img.shader-img(src="img/shaders/Campaign_Social-Media-Shader-Naranja.png", alt="Woman sit on a carousel, distortioned by shader", mobsrc="img/shaders/mobile/Branding_Design-Shader-Naranja.png")
 				img.shader-img(src="img/shaders/Content-Creation_Management-Shader-Naranja.png", alt="Hand selecting coffee beans, distortioned by shader", mobsrc="img/shaders/mobile/Branding_Design-Shader-Naranja.png")
 				img.shader-img(src="img/shaders/Event-Curation-Shader-Naranja.png", alt="Night event, distortioned by shader", mobsrc="img/shaders/mobile/Branding_Design-Shader-Naranja.png")
-				img.shader-img(src="img/shaders/E-commerce-Shader-Naranja.png", alt="Amongst few t-shirts, distortioned by shader", mobsrc="img/shaders/mobile/Branding_Design-Shader-Naranja.png")
+				img.shader-img(src="img/shaders/E-commerce-Shader-Naranja.png", alt="amongst few t-shirts, distortioned by shader", mobsrc="img/shaders/mobile/Branding_Design-Shader-Naranja.png")
 
 				.shifting-imgs-container
 					#shifting-bg-1.shifting-bg
