--- a/dev/assets/project-brand-cred.pug
+++ b/dev/assets/project-brand-cred.pug
@@ -23,7 +23,7 @@ block content
 
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Future Street Cred - streetwear inspired credit cards
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Streetwear inspired credit cards
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p At Jungle Beige, our philosophy is that creatives, and creative agencies, should make things simply for the sake of it. We love our client collaborations, but sometimes there are projects that can only exist on their own, without a brand or campaign tied to it.
 
