--- a/dev/assets/project-event-amongst.pug
+++ b/dev/assets/project-event-amongst.pug
@@ -2,41 +2,41 @@ extends _templates/layout.pug
 
 
 block title
-	title Jungle Beige | Amongst Few Event Curation
+	title Jungle Beige | amongst few Event Curation
 
 
 block content
 	.snj-container-fluid.project-page
 		.row
 			section.project-about.project-bg-event-amongst
-				+hero-project("Event Curation","Amongst Few","02")
+				+hero-project("Event Curation","amongst few","02")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
 						.snj-row
 							div.especific-item.snj-col-md-2
-								+project-box("Client", "Amongst Few")
+								+project-box("Client", "amongst few")
 							div.especific-item.offset-md-2.snj-col-md-4
-								+project-box("Project", "Events at Sole DXB & Amongst Few Cafe",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+								+project-box("Project", "Events at Sole DXB & amongst few café",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2016-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 
 
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Events at Sole DXB & Amongst Few Cafe
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Events at Sole DXB & amongst few café
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p Amongst Few hasn’t become the region’s premiere streetwear brand on their clothing alone. It’s also because they’ve made it a point to shape and move streetwear culture in Dubai through their activations and events. It’s become the north star for how Jungle Beige approaches the events it curates - move the needle, or don’t bother.
+						p amongst few hasn’t become the region’s premiere streetwear brand on their clothing alone. It’s also because they’ve made it a point to shape and move streetwear culture in Dubai through their activations and events. It’s become the north star for how Jungle Beige approaches the events it curates - move the needle, or don’t bother.
 
-						p At Sole DXB, we made countless visitors to the Amongst Few booth shed nostalgic tears of joy when we recreated the bedroom of a Sneaker/Hip Hop/Grime kid (including a fully functional Nintendo set up). A year later, Amongst Few’s collaboration with The Hundreds led to Sole DXB’s most celebrated art installation - in the most organic way possible.
+						p At Sole DXB, we made countless visitors to the amongst few booth shed nostalgic tears of joy when we recreated the bedroom of a Sneaker/Hip Hop/Grime kid (including a fully functional Nintendo set up). A year later, amongst few’s collaboration with The Hundreds led to Sole DXB’s most celebrated art installation - in the most organic way possible.
 
 
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p After selling out of the The Hundreds collab on Friday, we decided to tag “Sold Out” over our own booth (furniture and all) instead of setting up on Saturday. The community fully embraced this brazen decision and proceeded to use it as their own personal backdrop for IG. All this before “Instagrammable” was thrown around in every marketing meeting.
 
-						p Amongst Few Cafe has also been home to numerous activations, transforming the cafe to a new space with each new theme. One night it could be home of the annual sneaker and streetwear bible, All Gone. The next it will be a Jamaican backyard for the brand’s collaboration with Miss Lily’s. Same place, difference experience, moving the needle - every time.
+						p amongst few café has also been home to numerous activations, transforming the cafe to a new space with each new theme. One night it could be home of the annual sneaker and streetwear bible, All Gone. The next it will be a Jamaican backyard for the brand’s collaboration with Miss Lily’s. Same place, difference experience, moving the needle - every time.
 
 						p 
-							a(href="https://www.amongstfew.com/blogs/features" target="_blank" rel="nofollow noopener noreferrer") Amongst Few events.
+							a(href="https://www.amongstfew.com/blogs/features" target="_blank" rel="nofollow noopener noreferrer") amongst few events.
 
 
 
@@ -68,7 +68,7 @@ block content
 							.rectangle-arrow
 				.description.snj-col-8.offset-2.snj-col-md-4.offset-md-1
 					p Next Project
-					h3 Amongst Few
+					h3 amongst few
 					h4 E-commerce
 					a.page_transitioner(href="project-commerce-amongst.html") See case
 					p.copyright © Copyright 2020
