--- a/dev/assets/project-event-puma.pug
+++ b/dev/assets/project-event-puma.pug
@@ -31,7 +31,7 @@ block content
 
 
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p The following year, we celebrated International Women’s Day by capturing the beautiful diversity of Dubai women in the most inclusive way we could think of. Often brands will have target the same groups or expats because of their consumer strength in the country.
+						p The following year, we celebrated International Women’s Day by capturing the beautiful diversity of Dubai women in the most inclusive way we could think of. Often brands will target the same groups or expats because of their consumer strength in the country.
 
 						p For International Women’s Day, and for us, that wasn’t good enough. Instead, we celebrated nearly 30 different women, and their respective nationalities, as it’s this type of diversity that makes Dubai so special. Each woman was shot for their own portrait (with makeup colors from their country’s flag). Every single portrait was then displayed at a party hosted by 3 female DJs.
 
@@ -92,7 +92,7 @@ block content
 							.rectangle-arrow
 				.description.snj-col-8.offset-2.snj-col-md-4.offset-md-1
 					p Next Project
-					h3 Amongst Few
+					h3 amongst few
 					h4 Event Curation
 					a.page_transitioner(href="project-event-amongst.html") See case
 					p.copyright © Copyright 2020
