--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -24,7 +24,7 @@ block content
 
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Suede Guerrillas - grassroots marketing initiative
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Grassroots marketing initiative
 
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives that authentically embodied the campaign’s ethos. It was the first long-term micro-influencer campaign to exist in the region, and it produced an unprecedented amount of original content and activations - a millennial interpretation of “running the streets”.
