--- a/dev/assets/project-commerce-amongst.pug
+++ b/dev/assets/project-commerce-amongst.pug
@@ -2,19 +2,19 @@ extends _templates/layout.pug
 
 
 block title
-	title Jungle Beige | Amongst Few E-commerce
+	title Jungle Beige | amongst few E-commerce
 
 
 block content
 	.snj-container-fluid.project-page#commerce-amongst-project
 		.row
 			section.project-about.project-bg-commerce-amongst
-				+hero-project("E-commerce","Amongst Few","01")
+				+hero-project("E-commerce","amongst few","01")
 				.especifications-wrap.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					aside.especifications
 						.snj-row
 							div.especific-item.snj-col-md-2
-								+project-box("Client", "Amongst Few")
+								+project-box("Client", "amongst few")
 							div.especific-item.offset-md-2.snj-col-md-4
 								+project-box("Project", "Launch & Management of Website",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
@@ -25,18 +25,18 @@ block content
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Launch & Management of Website
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p Direct to consumer brands like Amongst Few have no choice but to develop an exceptional  e-commerce game. It’s the most important way to connect with consumers around the region, and world. The challenge, and opportunity, is how to translate what is so carefully curated and crafted in their flagship store into a digital experience.
+						p Direct to consumer brands like amongst few have no choice but to develop an exceptional  e-commerce game. It’s the most important way to connect with consumers around the region, and world. The challenge, and opportunity, is how to translate what is so carefully curated and crafted in their flagship store into a digital experience.
 
 						p The foundation of the site is its aesthetic - clean and nuanced like the brand and store. We then focused on the user experience. While the knowledge, style and warmth of the store staff isn’t easily translated online, we can still provide an efficient and flexible experience - shopping by brand, size, price range and even color.
 
 
 					div.paragraph-right.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
-						p True digital transformation isn’t complete without the other elements of the shopping experience, such as the brand’s social media channels, product and lifestyle visuals and exclusive online offers. It’s all one ecosystem that is carefully crafted in order to ensure the customer can easily access what they’re looking for, and come away fully understanding what the brand is about.
+						p True demand generation isn’t complete without the other elements of the shopping experience, such as the brand’s social media channels, product and lifestyle visuals and exclusive online offers. It’s all one ecosystem that is carefully crafted in order to ensure the customer can easily access what they’re looking for, and come away fully understanding what the brand is about.
 
 						
 
 						p 
-							a(href="https://www.amongstfew.com/" target="_blank" rel="nofollow noopener noreferrer") Amongst Few website.
+							a(href="https://www.amongstfew.com/" target="_blank" rel="nofollow noopener noreferrer") amongst few website.
 			
 
 
