--- a/dev/assets/workevent.pug
+++ b/dev/assets/workevent.pug
@@ -17,7 +17,7 @@ block content
 	.sections-p-wrapper.project-bg-event-puma
 		+project-sections("Event Curation", "PUMA", "01", "project-event-puma.html")
 	.sections-p-wrapper.project-bg-event-amongst
-		+project-sections("Event Curation", "Amongst Few", "02", "project-event-amongst.html")
+		+project-sections("Event Curation", "amongst few", "02", "project-event-amongst.html")
 	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
