Projects capitalization titles updates. Metatags for demo on server.

--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -13,11 +13,11 @@ html(class='no-js' lang="en")
 		//- meta(name="format-detection" content="telephone=no")
 
 		//- Share graphs for social media
-		meta(property="og:url" 			content="https://andrew.studio/clients/jb-release/")
+		meta(property="og:url" 			content="http://junglebeige.com/demo/")
 		meta(property="og:type" 		content="website")
 		meta(property="og:title" 		content="Jungle Beige")
 		meta(property="og:description" 	content="We create and consult for lifestyle rooted companies and organizations.")
-		meta(property="og:image" 		content="https://andrew.studio/clients/jb-release/Share-Graph.png")
+		meta(property="og:image" 		content="http://junglebeige.com/demo/Share-Graph.png")
 		meta(name="twitter:card", content="summary")
 
 		//- Favicon
