--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -16,13 +16,13 @@ block content
 							div.especific-item.snj-col-md-2
 								+project-box("Client", "PUMA")
 							div.especific-item.offset-md-2.snj-col-md-4
-								+project-box("Project", "High Beams - Dubai based Run Crew",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+								+project-box("Project", "High Beams - Dubai Based Run Crew",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2017-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3.about-wrapper
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Dubai based Run Crew
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Dubai Based Run Crew
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p High Beams Dubai is the city’s first Run Crew and Sound System. Its membership includes some of city’s top DJs, trainers and creatives. To break away from the mainstream, PUMA encouraged, and entrusted, Jungle Beige to explore the Run Crew movement found in cities like New York and London.
 
