--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -17,14 +17,14 @@ block content
 							div.especific-item.snj-col-md-2
 								+project-box("Client", "PUMA")
 							div.especific-item.offset-md-2.snj-col-md-4
-								+project-box("Project", "Suede Guerrillas - grassroots marketing initiative",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
+								+project-box("Project", "Suede Guerrillas - Grassroots Marketing Initiative",{lineDelayMob: 3, clientDelayMob: 7, projectDelayMob: 8})
 							div.especific-item.snj-col-md-2.offset-md-2
 								+project-box("Year", "2017-Present",{lineDelayMob: 4, clientDelayMob: 9, projectDelayMob: 10})
 
 
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Grassroots marketing initiative
+					h1.project-title.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="10" data-cascade-delay="5") Grassroots Marketing Initiative
 
 					div.paragraph-left.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="11" data-cascade-delay="6")
 						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives that authentically embodied the campaign’s ethos. It was the first long-term micro-influencer campaign to exist in the region, and it produced an unprecedented amount of original content and activations - a millennial interpretation of “running the streets”.
