Added php code for https redirection. Saved old htaccess content. Removed .html to hrefs since server version doesn't need them.

--- a/dev/assets/_modules/side-nav.pug
+++ b/dev/assets/_modules/side-nav.pug
@@ -1,10 +1,10 @@
 #side-nav
 	.row
 		.menu-wrapper.offset-2.snj-col-7
-			a.page_transitioner.menu-item.sidenav-elems(href="about.html")
+			a.page_transitioner.menu-item.sidenav-elems(href="about")
 				h2.item-title About Us
 				p.item-intro Know us a little more.
-			a.page_transitioner.menu-item.sidenav-elems(href="contact.html" color="brown")
+			a.page_transitioner.menu-item.sidenav-elems(href="contact" color="brown")
 				h2.item-title Contact Us
 				p.item-intro Drop us a line.
 
