--- a/dev/assets/contact.pug
+++ b/dev/assets/contact.pug
@@ -15,7 +15,7 @@ block content
 		//- .snj-row
 		.row
 			.center-wrapper
-				a.page_transitioner.about-block.offset-1.snj-col-10.offset-md-2.snj-col-md-5(href="message.html" color="light-orange")
+				a.page_transitioner.about-block.offset-1.snj-col-10.offset-md-2.snj-col-md-5(href="message" color="light-orange")
 					h2.subtitle-block.sub-1.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Get in touch
 
 					h2.subtitle-block.sub-2.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="0" data-cascade-delay="0") Contact Us
@@ -59,7 +59,7 @@ block content
 					.info-block.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="4" data-cascade-delay="4")
 						p © Copyright 2020
 
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
 
 
