--- a/dev/assets/project-brand-beams.pug
+++ b/dev/assets/project-brand-beams.pug
@@ -58,7 +58,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.page_transitioner.more-cases.prev-case(href="project-commerce-amongst.html")
+					a.page_transitioner.more-cases.prev-case(href="project-commerce-amongst")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -67,16 +67,16 @@ block content
 					p Next Project
 					h3 Future Street Cred
 					h4 Branding & Design
-					a.page_transitioner(href="project-brand-cred.html") See case
+					a.page_transitioner(href="project-brand-cred") See case
 					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.page_transitioner.more-cases.next-case(href="project-brand-cred.html")
+					a.page_transitioner.more-cases.next-case(href="project-brand-cred")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
 				//- p.copyright © Copyright 2020
-	a.page_transitioner.navigation-btn.btn-pages(href="workbranding.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="workbranding")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 
