--- a/dev/assets/workevent.pug
+++ b/dev/assets/workevent.pug
@@ -15,10 +15,10 @@ block content
 
 
 	.sections-p-wrapper.project-bg-event-puma
-		+project-sections("Event Curation", "PUMA", "01", "project-event-puma.html")
+		+project-sections("Event Curation", "PUMA", "01", "project-event-puma")
 	.sections-p-wrapper.project-bg-event-amongst
-		+project-sections("Event Curation", "amongst few", "02", "project-event-amongst.html")
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
+		+project-sections("Event Curation", "amongst few", "02", "project-event-amongst")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
