--- a/dev/assets/workstrategy.pug
+++ b/dev/assets/workstrategy.pug
@@ -15,10 +15,10 @@ block content
 
 
 	.sections-p-wrapper.project-bg-suede
-		+project-sections("Campaign & Social Media Strategy ", "Suede Guerrillas ", "01", "project-social-suede.html")
+		+project-sections("Campaign & Social Media Strategy ", "Suede Guerrillas ", "01", "project-social-suede")
 	.sections-p-wrapper.project-bg-power
-		+project-sections("Campaign & Social Media Strategy ", "Power Horse", "02", "project-social-power.html")
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
+		+project-sections("Campaign & Social Media Strategy ", "Power Horse", "02", "project-social-power")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
