--- a/dev/assets/_templates/layout.pug
+++ b/dev/assets/_templates/layout.pug
@@ -1,3 +1,6 @@
+//- Redirect to https
+<?php if(!isset($_SERVER["HTTPS"]) || $_SERVER["HTTPS"] != "on") {header("Location: https://" . $_SERVER["HTTP_HOST"] . $_SERVER["REQUEST_URI"], true, 301); exit; } ?>
+
 doctype html
 html(class='no-js' lang="en")
 	head
