--- a/dev/assets/about.pug
+++ b/dev/assets/about.pug
@@ -8,7 +8,7 @@ block title
 block header_nav
 	header#header-nav.snj-container-fluid
 		.header-wrapper.snj-col-12
-			a.logo-wrapper.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="index.html")
+			a.logo-wrapper.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="/")
 				+logo-jb
 
 
@@ -31,7 +31,7 @@ block content
 				include _modules/about-slider-points.pug
 				include _modules/slide-about.pug
 				
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
 
 
