--- a/dev/assets/index.pug
+++ b/dev/assets/index.pug
@@ -30,7 +30,7 @@ block content
 				p.points.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="6" data-cascade-delay="6") ..
 
 
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
 
 
