--- a/dev/assets/ourwork.pug
+++ b/dev/assets/ourwork.pug
@@ -30,14 +30,14 @@ block content
 			//- projects wrapper
 			.works-list.snj-col-10.offset-1.snj-col-md-9.offset-md-2
 				.wrap-list
-					+project-intro("workbranding.html","01", "Branding & Design", "","See case studies", "See case")
-					+project-intro("workstrategy.html", "02","Campaign"," & Social Media Strategy","See case studies", "See case", {textDelay: 1, arrowDelay: 2} )
-					+project-intro("workmanagement.html","03","Content Creation"," & Management", "See case studies", "See case", {textDelay: 2, arrowDelay: 3})
-					+project-intro("workevent.html","04","Event Curation","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
-					+project-intro("workcommerce.html","05","E-commerce","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
+					+project-intro("workbranding","01", "Branding & Design", "","See case studies", "See case")
+					+project-intro("workstrategy", "02","Campaign"," & Social Media Strategy","See case studies", "See case", {textDelay: 1, arrowDelay: 2} )
+					+project-intro("workmanagement","03","Content Creation"," & Management", "See case studies", "See case", {textDelay: 2, arrowDelay: 3})
+					+project-intro("workevent","04","Event Curation","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
+					+project-intro("workcommerce","05","E-commerce","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
 	
 
-	a.page_transitioner.navigation-btn.btn-pages(href="index.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="/")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+close-icon
 
