--- a/dev/assets/project-manage-puma.pug
+++ b/dev/assets/project-manage-puma.pug
@@ -57,7 +57,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.page_transitioner.more-cases.prev-case(href="project-social-power.html")
+					a.page_transitioner.more-cases.prev-case(href="project-social-power")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -66,15 +66,15 @@ block content
 					p Next Project
 					h3 Cartel Coffee
 					h4 Content Creation & Management
-					a.page_transitioner(href="project-manage-coffee.html") See case
+					a.page_transitioner(href="project-manage-coffee") See case
 					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.page_transitioner.more-cases.next-case(href="project-manage-coffee.html")
+					a.page_transitioner.more-cases.next-case(href="project-manage-coffee")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-	a.page_transitioner.navigation-btn.btn-pages(href="workmanagement.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="workmanagement")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
