--- a/dev/assets/workcommerce.pug
+++ b/dev/assets/workcommerce.pug
@@ -15,8 +15,8 @@ block content
 
 
 	.sections-p-wrapper.project-bg-commerce-amongst.full-screen
-		+project-sections("E-commerce", "amongst few", "01", "project-commerce-amongst.html")
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork.html")
+		+project-sections("E-commerce", "amongst few", "01", "project-commerce-amongst")
+	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
